--- a/docs/wx1_1451_part_3.md
+++ b/docs/wx1_1451_part_3.md
@@ -1,4 +1,4 @@
-# <u>**Part 3: Building a Device Customization using Macros**</u>
+# <u>**Build Room Documentation Macro**</u>
 
 ## <u>**Section 3.1: Outlining our Customization**</u>
 
@@ -50,7 +50,7 @@
 
 !!! important "Today's solution outline"
 
-    In part 3 of this lab, we'll build a Macro that will allow folks to either View a Document or Scan a QR code to take the document with them on your device
+    In this lab of this lab, we'll build a Macro that will allow folks to either View a Document or Scan a QR code to take the document with them on your device
 
     We'll review how to:
 
@@ -1076,8 +1076,6 @@ If you missed Section 2.6 in part 2 of this lab, please watch this Vidcast
     But we can do a few more things to make this a really rugged solution that enabled simpler deployment and allows us to scale a bit better
 
     And we can do this in several ways
-
-    Before moving to section 3.4 check your time, if you're past the 90 minute mark, please move on the Part 4 of this lab
 
 
 ### <u>**Section 3.4.1: Imports, Exports and a Config Object**</u>
