--- a/docs/wx1_1451_part_4.md
+++ b/docs/wx1_1451_part_4.md
@@ -19,7 +19,7 @@
     you have a tag to run a command using CE-Deploy(which you will see in a later lab) that will 
     only affect those devices.
 
-??? Webex "4.1 Exercises"
+??? lesson "4.1 Lessons"
 
     4.1.1 Login to the lab's Control Hub with your admin credentials
     
@@ -99,7 +99,7 @@
     going to create a template to set the volume of you device and enable macros for the Macro 
     deployment lab. 
 
-??? webex "4.2 Exercise"
+??? lesson "4.2 Lessons"
 
     4.2.1 Login to control hub with your lab admin credentials
     
@@ -232,7 +232,7 @@
     configuration consistency across devices. When default configurations are applied, you can still
     configure an individual device or a set of devices if needed.
 
-??? webex "4.3 Exercises"
+??? lesson "4.3 Lessons"
 
     4.3.1 Login to control hub with your lab admin credentials
     
@@ -304,7 +304,7 @@
     execute and find a command. In the next lab we will follow that up with deploying extensions 
     in a similar fashion.
 
-??? webex "4.4 Exercises"
+??? lesson "4.4 Lessons"
     
     4.4.1 Login to control hub with your lab admin credentials
     
@@ -361,7 +361,7 @@
     choose, all approaches yield the same outcome. In our labs, we will try using Control Hub and 
     then CE-Deploy.
 
-??? webex "4.5 Exercises"
+??? lesson "4.5 Lessons"
 
     4.5.1 In the clear search box for Run xCommands type UserInterface > Extensions >Panel and select 
     the Save option
@@ -553,7 +553,7 @@
     that facilitate this process. Control Hub now has the capability to manage both UI and Macro 
     customizations on individual endpoints, while CE-Deploy can assist with bulk deployment.
 
-??? webex "4.6 Exercises"
+??? lesson "4.6 Lessons"
     
     4.6.1 Login to control hub with your lab admin credentials
     
@@ -796,7 +796,7 @@
 	    <iframe src="https://app.vidcast.io/share/embed/8e846983-6528-46e9-9b95-7d1a3ae2f5b3" width="100%" height="100%" title="CE-Deploy Environments Training" frameborder="0" loading="lazy" allowfullscreen style="position:absolute; top:0; left: 0;border: solid; border-radius:12px;"></iframe>
     </div>
 
-??? cedeploy "4.7 Exercises"
+??? lesson "4.7 Lessons"
 
     4.7.1 Open CE-deploy and select the Download Webex Token button in the manage token section
     
@@ -863,7 +863,7 @@
     <iframe src="https://app.vidcast.io/share/embed/e0469f2c-5631-4a7a-a8aa-b15ecd84b4d3" width="100%" height="100%" title="CE-Deploy Running xAPI Commands" frameborder="0" loading="lazy" allowfullscreen style="position:absolute; top:0; left: 0;border: solid; border-radius:12px;"></iframe>
     </div>
 
-??? cedeploy "4.8 Exercises"
+??? lesson "4.8 Lessons"
 
     4.8.1 Open Ce-deploy and load the environment your created in the last lab.
     
@@ -941,7 +941,7 @@
     This QR code will provide users with access to information they can conveniently take with them when
     they leave the room.
 
-??? cedeploy "4.9 Exercises"
+??? lesson "4.9 Lessons"
 
     4.9.1 Open CE-Deploy and load the environment your created in a previous lab.
     
@@ -1071,7 +1071,7 @@
 	    <iframe src="https://app.vidcast.io/share/embed/5a2a7a03-441a-48d4-afa9-4dccc47c48c3" width="100%" height="100%" title="CE-Deploy Macro Deployment and the Macro Factory" frameborder="0" loading="lazy" allowfullscreen style="position:absolute; top:0; left: 0;border: solid; border-radius:12px;"></iframe>
     </div>
 
-??? cedeploy "4.10 Exercises"
+??? lesson "4.10 Lessons"
 
     4.10.1 Open CE-Deploy and load your environment you created in the previous lab
     
@@ -1230,7 +1230,7 @@
     can be deployed through Control Hub or CE-deploy. In this lab, we will deploy an extension to 
     accompany our macro from the last lab.
 
-??? cedeploy "4.11 Exercises"
+??? lesson "4.11 Lessons"
 
     4.11.1 Open CE-Deploy and load your environment you created in the previous lab if it's not already loaded
     
@@ -1332,7 +1332,7 @@
     admin accounts, making the device's web portal accessible only through Control Hub. In this lab,
     you will add a new local admin account to the device via the cloud xAPI using CE-Deploy. 
 
-??? cedeploy "4.12 Exercises"
+??? lesson "4.12 Lessons"
     
     4.12.1 Open CE-Deploy and load your environment you created in the previous lab
     
@@ -1454,7 +1454,7 @@
     terminal emulation feature to run a command. CE-Deploy is the swiss army knife of video endpoint
     deployments so lets keep exploring.
 
-??? cedeploy "4.13 Exercises"
+??? lesson "4.13 Lessons"
 
     4.13.1 From the ==local interface== in the deployment panel select ==Tools->SSH-TTY==.
     
@@ -1497,7 +1497,7 @@
     This backup will include all settings, macros, backgrounds, and extensions. 
     Having a backup of all your endpoints can be invaluable when you need to replace or restore a device.
 
-??? cedeploy "4.14 Exercises Part 1"
+??? lesson "4.14 Lessons Part 1"
     
     4.14.1 Open CE-Deploy and ensure you are in local mode and then select ==Backups== from the deployment panel
     
@@ -1547,7 +1547,7 @@
           <figcaption>Backup File Unzipped</figcaption>
         </figure>
 
-??? cedeploy "4.14 Exercises Part 2"
+??? lesson "4.14 Lessons Part 2"
 
     !!! Tip
 
