Fix Stringify XML

--- a/docs/wx1_1451_part_2.md
+++ b/docs/wx1_1451_part_2.md
@@ -1143,9 +1143,9 @@ ssh [USERNAME]@[IP_ADDRESS]
     
         ??? gif "Click to Compare your Terminal Output"
 
-            <figure markdown>
+            <!-- <figure markdown>
               ![xEvent UserInterface ScreenShotRequest RequestId Output Gif](./assets/wx1_1451_part_2/2-2-4_xEvent-Subscribe-ScreenShotRequest.gif){ width="600" }
-            </figure>
+            </figure> -->
         
         ??? gif "View Subscription Assistant Operation"
                 
