--- a/docs/wx1_1451_part_2.md
+++ b/docs/wx1_1451_part_2.md
@@ -6058,7 +6058,7 @@ This is not covered by this lab
 
     The Macro Editor is a `Web Based IDE` that's built into each Cisco Codec running {++ce9.2.X or higher (excluding the Sx10)++} that allows for the development of solutions using the ==Device xAPI and ES6 Javascript==. In a sense, the Macro Editor is like a virtual room control processor built right into the product.
 
-    It's capable of running {++10 active macros++} at any given time and allows for storage of up to ==2mb of text across all files== (Sounds small, but it's more than you thin :smiley:).
+    It's capable of running {++10 active macros++} at any given time and allows for storage of up to ==2mb of text across all files== (Sounds small, but it's more than you think :smiley:).
 
     You may have as many inactive macros as you can contain with the 2mb limit, which can be useful for storing information, organizing and modularizing work.
 
@@ -6248,7 +6248,7 @@ This is not covered by this lab
 
             import xapi from 'xapi';
 
-            xapi.Config.Video.Selfview.Set({ Mode: "On", FullScreenMode: "On", OnMonitorRole: "Off" });
+            xapi.Command.Video.Selfview.Set({ Mode: "On", FullScreenMode: "On", OnMonitorRole: "First" });
 
             ```
           
