--- a/docs/wx1_1451_part_2.md
+++ b/docs/wx1_1451_part_2.md
@@ -5944,7 +5944,7 @@ This collection has most pieces structured as we'd need it to and will be used t
 
         === "URL"
 
-            <pre><code>https://webexapis.com/v1/xapi/status?deviceId={{device_Id}}&name={++Audio.*++}</code></pre>
+            <pre><code>https://webexapis.com/v1/xapi/status?deviceId={{device_Id}}&name={++Audio.Volume++}</code></pre>
 
         === "Body"
 
